Alterações estruturais e correção de bugs
