# src/infra/http/controllers/PagamentoController.ts
@@ -1,6 +1,6 @@
-import { Body, Post, Route, Tags } from "tsoa";
+import { Body, Get, Path, Post, Route, Tags } from "tsoa";
 import { ExecutarPagamentoUseCase } from "../../../application/usecases/pagamento/ExecutarPagamentoUseCase";
-import { MercadoPagoService } from "../../mercadopago/MercadoPagoService";
+import { IIntegradorPagamentoGateway } from "../../../application/interfaces/pagamento/IIntegradorPagamento";
 
 export interface PagamentoRequest {
     pedido: number;
@@ -9,17 +9,22 @@ export interface PagamentoRequest {
 interface PagamentoResponse {
     id: number;
     status: string;
+    qrCode: string;
+}
+
+interface WebhookResponse {
+    ok: boolean;
 }
 
 @Route("pagamento")
 @Tags("Pagamento")
 export default class PagamentoController {
-    private executarPagamentoUseCase: ExecutarPagamentoUseCase;
-    private integradorPagamentos: MercadoPagoService;
+    private pagamentoUseCase: ExecutarPagamentoUseCase;
+    private integradorPagamentos: IIntegradorPagamentoGateway;
 
-    constructor(executarPagamentoUseCase: ExecutarPagamentoUseCase) {
-        this.executarPagamentoUseCase = executarPagamentoUseCase;
-        this.integradorPagamentos = new MercadoPagoService();
+    constructor(pagamentoUseCase: ExecutarPagamentoUseCase, integradorPagamentos: IIntegradorPagamentoGateway) {
+        this.pagamentoUseCase = pagamentoUseCase;
+        this.integradorPagamentos = integradorPagamentos;
     }
     /**
      * Iniciar processo de pagamento
@@ -27,29 +32,76 @@ export default class PagamentoController {
      */
     @Post("/iniciar")
     public async iniciarPagamento(@Body() body: PagamentoRequest): Promise<PagamentoResponse> {
-        const pagamento = await this.executarPagamentoUseCase.iniciar(body.pedido, this.integradorPagamentos);
+        const pagamento = await this.pagamentoUseCase.iniciar(body.pedido, this.integradorPagamentos);
         return {
             id: pagamento.id,
-            status: pagamento.status
+            status: pagamento.status,
+            qrCode: pagamento.qrCode
         }
     }
     /**
      * Confirmar processo de pagamento
+     * @deprecated (OBSOLETO) FASE 1 TECH-CHALLENGE
      */
     @Post("/confirmar")
     public async confirmarPagamento(@Body() body: PagamentoRequest): Promise<PagamentoResponse> {
-        const pagamento = await this.executarPagamentoUseCase.pago(body.pedido);
+        const pagamento = await this.pagamentoUseCase.pago(body.pedido);
         return {
             id: pagamento.id,
-            status: pagamento.status
+            status: pagamento.status,
+            qrCode: pagamento.qrCode
         }
     }
+    /**
+     * Cancelar processo de pagamento
+     * @deprecated (OBSOLETO) FASE 1 TECH-CHALLENGE
+     */
     @Post("/cancelar")
     public async cancelarPagamento(@Body() body: PagamentoRequest): Promise<PagamentoResponse> {
-        const pagamento = await this.executarPagamentoUseCase.cancelar(body.pedido);
+        const pagamento = await this.pagamentoUseCase.cancelar(body.pedido);
         return {
             id: pagamento.id,
-            status: pagamento.status
+            status: pagamento.status,
+            qrCode: pagamento.qrCode
+        }
+    }
+    /**
+     * Buscar o status de pagamento de um pedido
+     */
+    @Get("/status/:pedido")
+    public async buscarStatusPedido(@Path() pedido: number): Promise<PagamentoResponse> {
+        const pagamento = await this.pagamentoUseCase.consultaStatus(pedido);
+        return {
+            id: pagamento.id,
+            status: pagamento.status,
+            qrCode: pagamento.qrCode
+        }
+
+    }
+    /**
+     * Receber confirmação de pagamento do Integrador
+     */
+    @Post("/webhook")
+    public async receberStatusPagamentoIntegrador(@Body() payload: string): Promise<WebhookResponse> {
+        try {
+            const respostaIntegrador = await this.integradorPagamentos.tratarRetorno(payload);
+            if ((respostaIntegrador) && (respostaIntegrador.status == "closed")) {
+                const pagto = await this.pagamentoUseCase.consultaPedidoIntegrador(respostaIntegrador.id_pagamento);
+                if (pagto) {
+                    if (respostaIntegrador.pago) {
+                        this.pagamentoUseCase.pago(pagto.pedido);
+                    }
+                    else {
+                        this.pagamentoUseCase.cancelar(pagto.pedido);
+                    }
+                }
+            }
+            return {
+                ok: true
+            }
+        }
+        catch {
+            throw new Error('Erro no tratamento do payload de retorno do integrador');
         }
     }
 }
