# src/infra/http/routes/routes.ts
@@ -7,12 +7,12 @@ import PedidoController from "../controllers/PedidoController";
 import { CadastrarPedidoUseCase } from "../../../application/usecases/pedido/CadastrarPedidoUseCase";
 import PagamentoController from "../controllers/PagamentoController";
 import { ExecutarPagamentoUseCase } from "../../../application/usecases/pagamento/ExecutarPagamentoUseCase";
-
+import { MercadoPagoService } from "../../mercadopago/MercadoPagoService";
 
 const router = express.Router()
 
 //Clientes
-///i. Cadastro de clientes
+///1ªFase - Entregáveis 2 - i. Cadastro de clientes
 router.post("/cliente", async (req, res) => {
     try {
         const controller = new ClienteController(new CadastrarClienteUseCase());
@@ -31,13 +31,13 @@ router.post("/cliente", async (req, res) => {
     }
 });
 
-///ii. Identificação do cliente via CPF
+///1ªFase - Entregáveis 2 - ii. Identificação do cliente via CPF
 router.get("/cliente/cpf/:cpf", async (req, res) => {
     try {
         const controller = new ClienteController(new CadastrarClienteUseCase());
         const cliente = await controller.buscarCPF(req.params.cpf);
 
-        return res.status(201).send({cliente});
+        return res.status(201).send({ cliente });
     }
     catch (error) {
         if (error instanceof Error) {
@@ -52,7 +52,7 @@ router.get("/cliente/email/:email", async (req, res) => {
         const controller = new ClienteController(new CadastrarClienteUseCase());
         const cliente = await controller.buscarEmail(req.params.email);
 
-        return res.status(201).send({cliente});
+        return res.status(201).send({ cliente });
     }
     catch (error) {
         if (error instanceof Error) {
@@ -62,7 +62,7 @@ router.get("/cliente/email/:email", async (req, res) => {
 });
 
 //Item = Produto individual disponível no cardápio da lanchonete (ex: sanduíche, batata frita, refrigerante)
-///iii. Criar
+///1ªFase - Entregáveis 2 - iii. Criar
 router.post("/item", async (req, res) => {
     try {
         const controller = new ItemController(new CadastrarItemUseCase());
@@ -76,7 +76,7 @@ router.post("/item", async (req, res) => {
         }
     }
 });
-///iii. Editar
+///1ªFase - Entregáveis 2 - iii. Editar
 router.put("/item", async (req, res) => {
     try {
         const controller = new ItemController(new CadastrarItemUseCase());
@@ -91,7 +91,7 @@ router.put("/item", async (req, res) => {
     }
 
 });
-///iii. Remover
+///1ªFase - Entregáveis 2 - iii. Remover
 router.delete("/item/:id", async (req, res) => {
     try {
         const controller = new ItemController(new CadastrarItemUseCase());
@@ -102,7 +102,7 @@ router.delete("/item/:id", async (req, res) => {
         }
         else {
             return res.status(404).send("Item não encontrado");
-        }        
+        }
     }
     catch (error) {
         if (error instanceof Error) {
@@ -110,7 +110,7 @@ router.delete("/item/:id", async (req, res) => {
         }
     }
 });
-///iv. Buscar item por categoria
+///1ªFase - Entregáveis 2 - iv. Buscar item por categoria
 router.get("/item/:categoria", async (req, res) => {
     try {
         const controller = new ItemController(new CadastrarItemUseCase());
@@ -126,11 +126,11 @@ router.get("/item/:categoria", async (req, res) => {
 });
 
 //Pagamento
-///v. Fake checkout
+///1ªFase - Entregáveis 2 - v. Fake checkout
 ////Iniciar pagamento
 router.post("/pagamento/iniciar", async (req, res) => {
     try {
-        const controller = new PagamentoController(new ExecutarPagamentoUseCase());
+        const controller = new PagamentoController(new ExecutarPagamentoUseCase(), new MercadoPagoService());
         const resposta = await controller.iniciarPagamento(req.body);
 
         return res.status(200).json(resposta);
@@ -145,7 +145,7 @@ router.post("/pagamento/iniciar", async (req, res) => {
 ////Confirmar pagamento
 router.post("/pagamento/confirmar", async (req, res) => {
     try {
-        const controller = new PagamentoController(new ExecutarPagamentoUseCase());
+        const controller = new PagamentoController(new ExecutarPagamentoUseCase(), new MercadoPagoService());
         const resposta = await controller.confirmarPagamento(req.body);
 
         return res.status(200).json(resposta);
@@ -160,7 +160,7 @@ router.post("/pagamento/confirmar", async (req, res) => {
 ////Cancelar pagamento
 router.post("/pagamento/cancelar", async (req, res) => {
     try {
-        const controller = new PagamentoController(new ExecutarPagamentoUseCase());
+        const controller = new PagamentoController(new ExecutarPagamentoUseCase(), new MercadoPagoService());
         const resposta = await controller.cancelarPagamento(req.body);
 
         return res.status(200).json(resposta);
@@ -172,14 +172,10 @@ router.post("/pagamento/cancelar", async (req, res) => {
     }
 });
 
-//Pedido
-///Gravar pedido
-router.post("/pedido", async (req, res) => {
+////Webhook de atualização de status de pagamento
+router.post("/pagamento/webhook", async (req, res) => {
     try {
-        const controller = new PedidoController(new CadastrarPedidoUseCase());
-        const item = await controller.cadastrarPedido(req.body);
 
-        return res.status(201).send(item);        
     }
     catch (error) {
         if (error instanceof Error) {
@@ -187,13 +183,46 @@ router.post("/pedido", async (req, res) => {
         }
     }
 });
-///Atualizar status do pedido
+
+///2ªFase - Entregáveis 1 - a.iii Webhook para receber confirmação de pagamento aprovado ou recusado
+
+////2ªFase - Entregáveis 1 - a.ii
+router.get("/pagamento/status/:pedido", async (req, res) => {
+    try {
+        const controller = new PagamentoController(new ExecutarPagamentoUseCase(), new MercadoPagoService());
+        const resposta = await controller.buscarStatusPedido(Number(req.params.pedido));
+
+        return res.status(200).json(resposta);
+    }
+    catch (error) {
+        if (error instanceof Error) {
+            return res.status(500).json({ erro: error.message });
+        }
+    }
+});
+
+//Pedido
+///2ªFase - Entregáveis 1 - Gravar pedido
+router.post("/pedido", async (req, res) => {
+    try {
+        const controller = new PedidoController(new CadastrarPedidoUseCase());
+        const item = await controller.cadastrarPedido(req.body);
+
+        return res.status(201).send(item);
+    }
+    catch (error) {
+        if (error instanceof Error) {
+            return res.status(500).json({ erro: error.message });
+        }
+    }
+});
+///2ªFase - Entregáveis 1 - v. Atualizar status do pedido
 router.put("/pedido/status", async (req, res) => {
     try {
         const controller = new PedidoController(new CadastrarPedidoUseCase());
         const item = await controller.atualizarStatusPedido(req.body);
 
-        return res.status(201).send(item); 
+        return res.status(201).send(item);
     }
     catch (error) {
         if (error instanceof Error) {
@@ -201,7 +230,7 @@ router.put("/pedido/status", async (req, res) => {
         }
     }
 })
-///vi. Listar pedidos
+///1ªFase - Entregáveis 2 - vi. Listar pedidos
 router.get("/pedido/:status", async (req, res) => {
     try {
         const controller = new PedidoController(new CadastrarPedidoUseCase());
@@ -221,7 +250,30 @@ router.get("/pedido/:status", async (req, res) => {
     }
 });
 
-///buscar pedido
+///2ªFase - Entregáveis 1 - iv. Lista de pedidos deverá retorná-los com sudas descrições ordenados na seguinte regra
+////1. Pronto (PRONTO_PARA_ENTREGA) > Em Preparação (EM_PREPARACAO) > Recebido (ENVIADO_PARA_A_COZINHA)
+////2. Pedidos mais antigos primeiro e mais novos depois
+////3. Pedidos com status Finalizado (ENTREGUE) não devem aparecer na lista
+router.get("/pedido/status", async (req, res) => {
+    try {
+        const controller = new PedidoController(new CadastrarPedidoUseCase());
+        const resposta = await controller.buscaPorStatusModulo2();
+
+        if (resposta) {
+            return res.status(201).send(resposta);
+        }
+        else {
+            return res.status(404).send("Pedido não encontrado");
+        }
+    }
+    catch (error) {
+        if (error instanceof Error) {
+            return res.status(500).json({ erro: error.message });
+        }
+    }
+});
+
+///Buscar pedido
 router.get("/pedido/:id", async (req, res) => {
     try {
         const controller = new PedidoController(new CadastrarPedidoUseCase());
